<resources>
    <string name="app_name">Cats Gallery</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="another_picture">Another picture</string>
    <string name="install_on_wallpaper">Install on wallpaper</string>
    <string name="pictures">Pictures</string>
    <string name="about_the_breed">About the breed</string>
    <string name="favorites">Favorites</string>
    <string name="select_breed">Select a Breed</string>
    <string name="set_wp_success">Set wallpaper successfully</string>
    <string name="add_favorites_success">Added to favorites successfully</string>
    <string name="remove_favorites_failed">Can\'t remove cat from favorites 😢</string>
    <string name="setup">Settings</string>
    <string name="general_settings">General settings</string>
    <string name="api_key">API Key</string>
    <string name="api_key_summary">Change API Key</string>
    <string name="theme">Theme</string>
    <string name="theme_summary">Choose app theme</string>
    <string name="system_default">System</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="select_theme">Select theme</string>
    <string name="restart_app">Restart the app for the changes to take effect</string>
    <string name="delete">Delete</string>
    <string name="characteristic">characteristic:</string>
    <string name="open_wikipedia">Open Wikipedia</string>
    <string name="temperament">Temperament</string>
    <string name="life_span">Life Span (years)</string>
    <string name="alternative_names">Alternative Names</string>
    <string name="origin">Origin</string>
    <string name="adaptability">Adaptability</string>
    <string name="affection_level">Affection Level</string>
    <string name="child_friendly">Child Friendly</string>
    <string name="dog_friendly">Dog Friendly</string>
    <string name="energy_level">Energy Level</string>
    <string name="grooming">Grooming</string>
    <string name="health_issues">Health Issues</string>
    <string name="intelligence">Intelligence</string>
    <string name="shedding_level">Shedding Level</string>
    <string name="social_needs">Social Needs</string>
    <string name="stranger_friendly">Stranger Friendly</string>
    <string name="vocalisation">Vocalisation</string>
    <string name="from_1_to_5">From 1 to 5</string>
    <string name="hairless">Hairless</string>
    <string name="rare">Rare</string>
    <string name="rex">Rex</string>
    <string name="suppressed_tail">Suppressed Tail</string>
    <string name="short_legs">Short Legs</string>
    <string name="hypoallergenic">Hypoallergenic</string>
    <string name="select_random">Select random breed</string>
</resources>