<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:scrollbars="vertical"
    tools:context="ru.teamfive.catsgallery.ui.fragments.ImageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/image_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="320dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/loader_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:padding="20dp" />
        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_to_favorites"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:text="@string/add_to_favorites"
            app:icon="@drawable/ic_favorite"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toTopOf="@+id/btn_another_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_container" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_another_picture"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/another_picture"
            app:icon="@drawable/ic_image"
            app:iconGravity="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_to_favorites" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_install_on_wallpaper"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/install_on_wallpaper"
            app:icon="@drawable/ic_wallpaper"
            app:iconGravity="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_another_picture" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_about_breed"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/about_the_breed"
            app:icon="@drawable/ic_info"
            app:iconGravity="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_install_on_wallpaper"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
